--- a/components/views/chat/message/Message.less
+++ b/components/views/chat/message/Message.less
@@ -74,6 +74,8 @@
   .message-container {
     position: relative;
     word-break: break-word;
+    font-family: @secondary-font;
+    font-size: @text-size;
   }
   &:hover {
     &:extend(.background-semitransparent-light);
