--- a/components/views/user/User.less
+++ b/components/views/user/User.less
@@ -43,8 +43,9 @@
       line-height: 1.4;
       text-overflow: ellipsis;
       overflow: hidden;
-      font-size: @micro-text-size;
+      font-size: @mini-text-size;
       color: @text-muted;
+      font-family: @secondary-font;
     }
 
     flex: 1;
